--- a/templates/APIwait.html
+++ b/templates/APIwait.html
@@ -4,7 +4,7 @@
     <title>QRコードを作成！</title>
 </head>
 <body>
-    処理中です<br>ちょっと待ってね
+    読み込み中です...<br>10秒以内にページがリダイレクトされます。
     <script>setTimeout(function(){location.reload();},1000);</script>
 </body>
 </html>
