--- a/templates/APIwait.html
+++ b/templates/APIwait.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>QRコードを作成！</title>
+    <meta charset="UTF-8">
+    <title>読み込み中</title>
 </head>
 <body>
     読み込み中です...<br>10秒以内にページがリダイレクトされます。
