APIwait.html を更新

--- a/templates/APIwait.html
+++ b/templates/APIwait.html
@@ -5,7 +5,7 @@
     <title>読み込み中</title>
 </head>
 <body>
-    読み込み中です...<br>10秒以内にページがリダイレクトされます。
+    読み込み中です...(これには時間がかかる場合があります)<br>10秒以内にページがリダイレクトされます。
     <script>setTimeout(function(){location.reload();},1000);</script>
 </body>
 </html>
