--- a/templates/home.html
+++ b/templates/home.html
@@ -40,7 +40,7 @@
     versionElement.style.color = "white";
 
     // このインスタンスのバージョン
-    const currentVersion = "v1.0.0";
+    const currentVersion = "v1.0.1";
 
     // バージョンを比較
     fetch('https://raw.githubusercontent.com/siawaseok3/slim-2-by-siawaseok/refs/heads/main/version.txt')
@@ -54,7 +54,7 @@
                 versionElement.style.backgroundColor = "red";
             }
 
-            versionElement.textContent = `${currentVersion} (最新: ${remoteVersion})`;
+            versionElement.textContent = `${currentVersion} (最新: ${remoteVersion}最新ではない場合はscratchユーザーziziidesuに言ってください)`;
         })
         .catch(error => {
             console.error('Error fetching version:', error);
